syntax = "proto3";
package Sining.Message;
message G2A_TestRequest // IRouteRequest,G2A_TestResponse
{

}
message G2A_TestResponse // IRouteResponse
{
	
}
message G2M_RequestAddressableId // IRouteRequest,M2G_ResponseAddressableId
{

}
message M2G_ResponseAddressableId // IRouteResponse
{
	int64 AddressableId = 1;	// Map服务器返回的AddressableId
}